fix modal shift on alert shown

--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -1,11 +1,8 @@
 .modal {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: var(--background-modal, #cacaca);
   position: absolute;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   top: 0;
   left: 0;
 }
